@@ -1,6 +1,6 @@
 
-# Use the Flask debugger and auto-reloading?
-# You probably want this option set to True on live mode.
+# Use the Flask debugger?
+# Provides an interactive console and detailed error reporting.
 DEBUG = True
 
 
