@@ -1,6 +1,6 @@
 
-# When building the site, you want this option set to False.
-# Freezing will DEBUG = True is slower.
+# Setting DEBUG to True when freezing provides a detailed
+# traceback to stderr on errors.
 DEBUG = False
 
 
